Fix button & input alignment

--- a/src/tags-input/tags-input.css
+++ b/src/tags-input/tags-input.css
@@ -62,7 +62,8 @@
   margin-bottom: -1px;
 
   & .outerContainer {
-    --ring-input-padding-block: 0;
+    --ring-input-padding-top: 0;
+    --ring-input-padding-bottom: 0;
   }
 
   & .container {
